--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     </title>
 </head>
 <header>
-    <h1><a href="/">Django Girls Blog</a></h1>
+    <h1><a href="/">Works of Gama Uy Garcia</a></h1>
 </header>
 
 <article>
