--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<head>
-    <title>
-        Works of Gama Uy Garcia
-    </title>
-</head>
-<header>
-    <h1><a href="/">Works of Gama Uy Garcia</a></h1>
-</header>
-{% for post in posts %}
-<body>
-    <article>
-        <time>published: {{ post.published_date }}</time>
-        <h2><a href=""> {{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </article>
-    {% endfor %}
 
-</body>
+<!DOCTYPE html>
+
+{% extends "blog/base.html" %}
+{% block content %} 
+    {% for post in posts %}
+        <article class="post">
+            <time class="date">
+                {{ post.published_date }}
+            </time>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+        </article>
+    {% endfor %}
+{% endblock %}
 </html>
